Bump sdk from 1.0.6 to 1.0.8 (#50)
* Bump sdk from 1.0.6 to 1.0.8

Bumps [sdk](https://github.com/VKCOM/vk-java-sdk) from 1.0.6 to 1.0.8.
- [Release notes](https://github.com/VKCOM/vk-java-sdk/releases)
- [Commits](https://github.com/VKCOM/vk-java-sdk/commits/v1.0.8)

Signed-off-by: dependabot[bot] <support@github.com>

* vk-sdk fixes

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Grigory Zhigalov <zhigalov8@gmail.com>